--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,12 @@
-* {
-    color: red;
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background: linear-gradient(orange, violet, lightgreen);
+}
+
+html {
+    scroll-behavior: smooth;
 }
