--- a/css/main3.css
+++ b/css/main3.css
@@ -138,8 +138,8 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 80px;
-  height: 80px;
+  width: 50px;
+  height: 50px;
   cursor: pointer;
   transition: var(--smooth);
   z-index: 6;
@@ -211,7 +211,6 @@ header {
 }
 
 .banner__heading h1 {
-  font-size: 2.25rem;
   padding-top: 4em;
   margin-bottom: 0.8em;
   text-align: center;
@@ -222,6 +221,7 @@ header {
   line-height: 2em;
   margin-bottom: 1.5em;
   text-align: center;
+  font-size: 16px;
 }
 
 .banner__heading button {
@@ -411,6 +411,10 @@ header {
 
   .banner__heading button {
     margin-left: 64px;
+  }
+
+  .banner__heading p {
+    font-size: 50px;
   }
 
   .banner__socials {
