--- a/style.css
+++ b/style.css
@@ -1,151 +1,137 @@
 h1 {
-
-	color: #fff;
+  color: #fff;
 }
-body, html {
-
-	margin: 0;
-	padding: 0;
-
+body,
+html {
+  margin: 0;
+  padding: 0;
 }
 
 body {
-
-	background: url(nen.gif) no-repeat center center fixed;
-	background-size: cover;
+  background: url(nen.gif) no-repeat center center fixed;
+  background-size: cover;
 }
 img {
- margin-top: 10px;
- width: 120px;
- height: 120px;
-margin-left: 10px;
+  margin-top: 10px;
+  width: 120px;
+  height: 120px;
+  margin-left: 10px;
 }
 header {
-	margin-top: 1em;
-	text-align: center;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+  margin-top: 1em;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 header > img {
-	width: 9em;
-	height: 9em;
-	border-radius: 100%;
-	border: 2px solid #fff;
-	box-shadow: red 0px 2px 8px 0px; 
+  width: 9em;
+  height: 9em;
+  border-radius: 100%;
+  border: 2px solid #fff;
+  box-shadow: red 0px 2px 8px 0px;
 }
 header > h1 {
-	display: inline-block;
-	font-size: 1.2em;
-	font-weight: bold;
-	border-radius: 1em;
-	background-color: #000 ;
-	color: #fff;
-	padding: 0.3em 0.6em;
-	border: 2px solid #fffa;
+  display: inline-block;
+  font-size: 1.2em;
+  font-weight: bold;
+  border-radius: 1em;
+  background-color: #000;
+  color: #fff;
+  padding: 0.3em 0.6em;
+  border: 2px solid #fffa;
 }
 ul {
-	box-sizing: border-box;
-	list-style: none;
-	margin: 0 autu;
-	padding: 1em;
+  box-sizing: border-box;
+  list-style: none;
+  margin: 0 autu;
+  padding: 1em;
 }
 ul > li {
-   
-   background-color: #fffa;
-   border-radius: 1em;
-   padding: 0.5;
-   margin: 1em 0;
-   align-items: center;
-   display: flex;
+  background-color: #fffa;
+  border-radius: 1em;
+  padding: 0.5;
+  margin: 1em 0;
+  align-items: center;
+  display: flex;
   display: inline-block;
 }
 ul > li > a {
-
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-content: center;
-	gap: 0em;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+  gap: 0em;
 }
 a {
-
-	color: black;
-	text-decoration: none;
-	font-size: 20px;
-	align-items: center;
-	padding: 5px;
-	
+  color: black;
+  text-decoration: none;
+  font-size: 20px;
+  align-items: center;
+  padding: 5px;
 }
 ul {
-	text-align: center;
-	padding: auto;
+  text-align: center;
+  padding: auto;
 }
 p {
-
-	text-align: center;
-	color: #fff;
+  text-align: center;
+  color: #fff;
 }
 
+.nav {
+  max-height: 80px;
+  display: flex;
+  justify-content: space-between;
+  color: #ffff;
+  background: rgba(0, 0, 0, 0.2);
+  padding: 0px;
+}
 
-.nav{
-    max-height: 80px;
-    display: flex;
-    justify-content: space-between;
-    color: #ffff;
-    background: rgba(0,0,0,0.2);
-    padding:0px;
+.nav ul {
+  position: relative;
+  padding-top: 10px;
+  text-align: none;
+  display: flex;
+  list-style-type: none;
+  padding-left: 10px;
+}
+.nav ul li {
+  margin: 0 5px;
+  padding: 0 10px;
+}
+.nav ul li a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 20px;
+  transition: all ease 0.4s;
+}
+.nav ul li a:hover {
+  color: #111111;
+}
+.project .card .img1 {
+  display: flex;
+}
+.card {
+  margin: 40px 50px;
+  padding: 20px 20px;
+  font-size: 20px;
+  position: absolute;
+  width: 15%;
+  height: auto;
+  border-radius: 30px;
+  background: rgba(0, 0, 0, 0.2);
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 30px 50px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 26px -18px inset;
+}
 
+.imgproject {
+  padding-left: 35%;
+}
+.imgproject :hover {
+  opacity: 0.5;
+}
 
-    }
-   
-    .nav ul{ 
-        position:relative;
-        padding-top: 10px;
-        text-align: none;
-        display:flex;
-        list-style-type: none;
-     padding-left: 10px;
-    }
-    .nav ul li{
-        margin: 0 5px;
-        padding: 0 10px;
-    }
-    .nav ul li a{
-        text-decoration: none;
-        color: #fff;
-        font-size: 20px;
-        transition: all ease .4s;
-    }
-    .nav ul li a:hover{
-        color: #111111;
-    }
-    .project .card .img1{
-        display: flex;
-        
-     }
-    .card { 
-        margin: 40px 50px;
-        padding: 20px 20px;
-        font-size: 20px;
-        position: absolute;
-        width: 15%;
-        height: auto;
-        border-radius: 30px;
-        background: rgba(0,0,0,0.2);
-        box-shadow: rgba(0, 0, 0, 0.3) 0px 30px 50px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 26px -18px inset;
-      }
-     
-      .imgproject{
-      
-        padding-left: 35%;
-      }
-      .imgproject :hover{
-
-        opacity: 0.5;
-      }
-
-  .clickhere :hover{
-    color: red;
-  }
-     
+.clickhere :hover {
+  color: red;
+}
