--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
-*,
-*::before,
-*::after {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -17,11 +15,11 @@
   --bg-color: #1f242d;  
   --second-bg-color: #323946;
   --text-color: #fff;
-  --main-color: #0ef;
+  --main-color: rgb(146, 39, 170);
 }
 
 html {
-  font-size: 62.5%;
+  font-size: 50.5%;
   overflow-x: hidden;
 }
 
@@ -41,4 +39,29 @@ body {
   justify-content: space-between;
   align-items: center;
   z-index: 100;
+}
+
+.logo {
+  font-size: 2.5rem;
+  color: var(--text-color);
+  font-weight: 600; /*thiết lập độ đậm của chữ là 600 (có thể hiểu là độ dày của chữ)*/
+  cursor: default; /*con trỏ sẽ không thay đổi hình dạng khi di chuột qua phần tử*/
+}
+
+.navbar a{
+  font-size: 1.7rem;
+  color: var(--text-color);
+  margin-left: 4rem;
+  transition: .3s;
+}
+
+.navbar a:hover,
+.navbar a.active {
+  color: var(--main-color);
+}
+
+#menu-icon {
+  font-size: 3.6rem;
+  color: var(--text-color);
+  display: none; /*ẩn phần tử, có nghĩa là phần tử này không sẽ được hiển thị trên trang web.*/
 }
