--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,12 @@
     box-sizing: border-box;
 }
 
+:root {
+    --black: var(--black)
+    --white: var
+
+}
+
 @font-face {
     font-family: WraithArcBlocks-5n0v;
     src: url('../fonts/WraithArcBlocks-5n0v.otf');
@@ -24,13 +30,16 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    position: relative;
     padding-left: 39.59px;
     padding-right: 39.59px;
+    height: 100px;
+    margin-top: -85px;
 }
 
 .navbar__link {
     font-family: WraithArcBlocks-5n0v;
-    font-size: 70px;
+    font-size: 50pt;
     color: white;
     text-decoration: none;
 }
@@ -38,4 +47,20 @@ body {
 .navbar__link:hover{
     color: #72fc0a;
 
+}
+
+.home {
+    padding-left: 39.59px;
+}
+
+.home__paragraph {
+    font-family: Bartomes;
+    color: white;
+    padding-left: 39.59px;
+    padding-right: 39.59px;
+    font-size: 19px;
+}
+
+.home {
+    display: flex;
 }
