--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 
 * {
   margin: 0;
@@ -8,11 +8,11 @@
   border: none;
   outline: none;
   scroll-behavior: smooth;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 :root {
-  --bg-color: #1f242d;  
+  --bg-color: #1f242d;
   --second-bg-color: #323946;
   --text-color: #fff;
   --main-color: rgb(146, 39, 170);
@@ -28,6 +28,11 @@ body {
   color: var(--text-color);
 }
 
+section {
+  min-height: 100vh;
+  padding: 10rem 9% 2rem;
+}
+
 .header {
   position: fixed;
   top: 0;
@@ -41,18 +46,22 @@ body {
   z-index: 100;
 }
 
+.header.sticky {
+  border-bottom: 0.1rem solid rgba(0, 0, 0, 0.2); /*áp dụng phần header đầu trang phân biệt giữa header với phần nội dung bên dưới khi người dùng cuộn trang xuống.*/
+}
 .logo {
   font-size: 2.5rem;
   color: var(--text-color);
   font-weight: 600; /*thiết lập độ đậm của chữ là 600 (có thể hiểu là độ dày của chữ)*/
   cursor: default; /*con trỏ sẽ không thay đổi hình dạng khi di chuột qua phần tử*/
+  color: var(--main-color);
 }
 
-.navbar a{
+.navbar a {
   font-size: 1.7rem;
   color: var(--text-color);
   margin-left: 4rem;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .navbar a:hover,
@@ -64,4 +73,437 @@ body {
   font-size: 3.6rem;
   color: var(--text-color);
   display: none; /*ẩn phần tử, có nghĩa là phần tử này không sẽ được hiển thị trên trang web.*/
+}
+
+.home {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.home-img img {
+  width: 25vw;
+}
+
+.home-content h3 {
+  font-size: 3.2rem;
+  font-weight: 700;
+}
+
+.home-content h3:nth-of-type(2) {
+  margin-bottom: 2rem;
+}
+
+span {
+  color: var(--main-color);
+}
+
+.home-content h1 {
+  font-size: 5rem;
+  font-weight: 700;
+  line-height: 1.3;
+  color: var(--main-color);
+}
+
+.home-content p {
+  font-size: 1.5rem;
+}
+
+.social-media a {
+  display: inline-flex;
+  justify-content: center; /*căn giữa các phần tử theo chiều ngang.*/
+  align-items: center; /* căn giữa các phần tử theo chiều dọc.*/
+  width: 4rem;
+  height: 4rem;
+  background: transparent; /*thiết lập màu nền của phần tử là trong suốt.*/
+  border: 0.2rem solid var(--main-color);
+  border-radius: 50%;
+  font-size: 2rem;
+  color: var(--main-color);
+  margin: 3rem 1.5rem 3rem 0;
+}
+
+.btn {
+  display: inline-block;
+  padding: 1rem 2.8rem;
+  background: var(--main-color);
+  border-radius: 4rem; /*Đặt bán kính bo tròn cho góc của phần tử là 4rem*/
+  box-shadow: 0 0 1rem var(--main-color); /* đặt hiệu ứng bóng cho  phần tử với bóng có màu tương đương với biến --main-color.*/
+  font-size: 1.6rem;
+  color: var(--second-bg-color);
+  letter-spacing: 0.1rem; /*Đặt khoảng cách giữa các chữ cái của phần tử là 0.1rem */
+  font-weight: 600;
+}
+
+.btn:hover {
+  background: rgb(28, 226, 236);
+}
+
+.about {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  background: var(--second-bg-color);
+}
+
+.about-img img {
+  width: 35vw;
+}
+
+.heading {
+  text-align: center;
+  font-size: 4.5rem;
+  color: rgb(76, 235, 113);
+}
+
+.about-centent h2 {
+  text-align: left;
+  line-height: 1.2;
+}
+
+.about-centent h3 {
+  font-size: 2.9rem;
+  font-weight: 700;
+  color: orangered;
+}
+
+.about-centent p {
+  font-size: 1.6rem;
+  margin: 2rem 0 3rem;
+}
+
+.services h2 {
+  margin-bottom: 5rem;
+}
+
+.services-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem; /*Thiết lập khoảng cách giữa các phần tử con là 2 rem, tạo ra một khoảng cách giữa các mục dịch vụ.*/
+  flex-wrap: wrap; /*ho phép các phần tử con được bọc vào nhiều dòng nếu chúng vượt quá chiều rộng của phần tử chứa.*/
+}
+
+.services-container .services-box {
+  flex: 1 1 30rem;
+  background: var(--second-bg-color);
+  padding: 3rem 2rem 4rem;
+  border-radius: 2rem;
+  text-align: center;
+  border: 0.2rem solid var(--bg-color);
+  transition: 0.5s ease; /* hiệu ứng chuyển động chậm */
+}
+
+.services-container .services-box:hover {
+  border-color: var(--main-color); /* hiệu ứng đường viền thay đổi màu sắc*/
+  transform: scale(1.02); /* phóng to */
+}
+
+.services-box i {
+  font-size: 7rem;
+  color: var(--main-color);
+}
+
+.services-box h3 {
+  font-size: 2.6rem;
+}
+
+.services-box p {
+  font-size: 1.6rem;
+  margin: 1rem 0 3rem;
+}
+
+.portfolio {
+  background: var(--bg-color);
+}
+
+.portfolio h2 {
+  margin-bottom: 4rem;
+}
+
+.portfolio-container {
+  display: grid; /* Định nghĩa kiểu hiển thị là một lưới (grid)*/
+  grid-template-columns: repeat(
+    3,
+    1fr
+  ); /*Chia lưới thành 3 cột có chiều rộng bằng nhau sử dụng hàm repeat() và giá trị 1fr, có nghĩa là tỉ lệ tự động chia sẻ chiều rộng giữa các cột.*/
+  align-items: center;
+  gap: 2.5rem; /*Khoảng cách giữa các phần tử trong lưới là 2.5rem.*/
+}
+
+.portfolio-container .portfolio-box {
+  position: relative;
+  border-radius: 2rem;
+  box-shadow: 0 0 1rem var(--bg-color);
+  overflow: hidden; /*Ẩn các phần tử con bên trong phần tử, khi các phần tử con vượt ra ngoài phạm vi của phần tử cha.*/
+  display: flex;
+}
+
+.portfolio-box img {
+  width: 100%;
+  transition: 0.5s ease;
+}
+
+.portfolio-box:hover img {
+  transform: scale(1.1);
+}
+
+.portfolio-box .portfolio-layer {
+  position: absolute; /*nó sẽ được đặt trong phần tử cha có thuộc tính position là relative, absolute hoặc fixed.*/
+  bottom: 0; /* Cài đặt vị trí của phần tử con .portfolio-layer ở phía dưới bên trái của phần tử cha */
+  left: 0;
+  width: 100%; /*Cài đặt chiều rộng và chiều cao của phần tử con .portfolio-layer bằng với phần tử cha .portfolio-box.*/
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.1), var(--main-color));
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center; /*  căn giữa theo chiều ngang.*/
+  padding: 0 4rem; /* phần tử con bên trong là 0 ở phía trên và dưới, 4rem ở phía trái và phải.*/
+  transform: translateY(
+    100%
+  ); /*di chuyển phần tử đó xuống dưới 100% kích thước của phần tử đó.*/
+  transition: 0.5s ease; /*sử dụng làm cho các thay đổi trên trang web của bạn trông mượt mà và chuyển động tự nhiên hơn.*/
+}
+
+.portfolio-box:hover .portfolio-layer {
+  transform: translateY(
+    0
+  ); /* di chuyen phần tử lên trên 0% kích thước của phần tử đó*/
+}
+
+.portfolio-layer h4 {
+  font-size: 3rem;
+}
+
+.portfolio-layer p {
+  font-size: 1.6rem;
+  margin: 0.3rem 0 1rem;
+}
+
+.portfolio-layer a {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 5rem;
+  height: 5rem;
+  background: var(--text-color);
+  border-radius: 50%;
+}
+
+.portfolio-layer a i {
+  font-size: 2rem;
+  color: var(--second-bg-color);
+}
+
+.contact h2 {
+  margin-bottom: 3rem;
+}
+
+.contact form {
+  max-width: 70rem;
+  margin: 1rem auto;
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+.contact form .input-box {
+  display: flex;
+  justify-content: space-between; /*thuộc tính justify-content để căn chỉnh các phần tử con theo chiều ngang*/
+  flex-wrap: wrap; /*Giá trị wrap giúp các phần tử con được bố trí xuống dòng khi nó không thể nằm trên cùng một dòng với phần tử khác.*/
+}
+
+.contact form .input-box input,
+.contact form textarea {
+  width: 100%;
+  padding: 1.5rem;
+  font-size: 1.6rem;
+  color: var(--text-color);
+  background: var(--second-bg-color);
+  border-radius: 0.8rem; /* bo tròn các góc của phần tử input và textarea*/
+  margin: 0.7rem 0; /*thuộc tính margin để đặt khoảng cách giữa các phần tử input và textarea*/
+}
+
+.contact form .input-box input {
+  width: 49%;
+}
+
+.contact form textarea {
+  resize: none; /* ngăn chặn việc co giãn kích thước của phần textarea khi người dùng kéo thả chuột trên đó*/
+}
+
+.contact form .btn {
+  margin-top: 2rem; /*thiết lập khoảng cách giữa nút gửi và các phần tử khác trong form*/
+  cursor: pointer;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 2rem 9%;
+  background: var(--second-bg-color);
+}
+
+.footer-text p {
+  font-size: 1.6rem;
+}
+
+.footer-iconTop a {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.8rem;
+  background: var(--main-color);
+  border-radius: 0.8rem;
+}
+
+.footer-iconTop a:hover {
+  box-shadow: 0 0 1rem var(--main-color);
+}
+
+.footer-iconTop a i {
+  font-size: 4rem;
+  color: var(--second-bg-color);
+}
+
+/* BREAKPOINTS */
+@media (max-width: 1200px) {
+  html {
+    /*nếu kích thước màn hình nhỏ hơn hoặc bằng 1200px, 
+    thì kích thước font chữ trên trang web sẽ được thiết lập thành 55% của kích thước font chữ mặc định.*/
+    font-size: 55%;
+  }
+}
+
+@media (max-width: 991px) {
+  /*điều chỉnh về padding (
+  khoảng cách giữa nội dung và biên của phần tử) cho header, 
+  section và footer trên trang web */
+  .header {
+    padding: 2rem 3%;
+  }
+
+  section {
+    padding: 10rem 3% 2rem;
+  }
+
+  .services {
+    padding-bottom: 7rem;
+  }
+
+  .portfolio {
+    padding-bottom: 7rem;
+  }
+
+  .contact {
+    min-height: auto;
+  }
+
+  .footer {
+    padding: 2rem 3%;
+  }
+}
+
+@media (max-width: 768px) {
+  #menu-icon {
+    display: block;
+  }
+
+  .navbar {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    padding: 1rem 3%;
+    background: var(--bg-color);
+    border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+    display: none;
+  }
+
+  .navbar.active {
+    display: block;
+  }
+
+  .navbar a {
+    display: block;
+    font-size: 2rem;
+    margin: 3rem 0;
+  }
+
+  .home {
+    flex-direction: column;
+  }
+
+  .home-content h3 {
+    font-size: 2.6rem;
+  }
+  .home-content h1 {
+    font-size: 5rem;
+  }
+
+  .home-img {
+    width: 70vw;
+    margin-top: 4rem;
+  }
+
+  .about {
+    flex-direction: column-reverse;
+  }
+
+  .about img {
+    width: 70vw;
+    margin-top: 4rem;
+  }
+
+  .services h2 {
+    margin-bottom: 3rem;
+  }
+
+  .portfolio h2 {
+    margin-bottom: 3rem;
+  }
+
+  .portfolio-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 617px) {
+  .portfolio-container {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 450px) {
+  html {
+    font-size: 50%;
+  }
+
+  .contact form .input-box input {
+    width: 100%;
+  }
+}
+
+@media (max-width: 400px) {
+  .home-img img {
+    width: 90vw;
+  }
+
+  .about-img img {
+    width: 90vw;
+  }
+
+  .footer {
+    flex-direction: column-reverse;
+  }
+
+  .footer p {
+    text-align: center;
+    margin-top: 2rem;
+  }
 }
